<?xml version="1.0" encoding="utf-8"?>
<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#201E28"
    tools:context=".presenttation.Activity.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#fdfdfd"
        android:layout_gravity="center"
        android:layout_marginTop="170dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/createAccount" />

    <EditText
        android:id="@+id/user_login"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/enterLogin"
        android:textColorHint="#6a6a6a"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textColor="#fdfdfd" />

    <EditText
        android:id="@+id/user_email"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/enterEmail"
        android:textColorHint="#6a6a6a"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textColor="#fdfdfd" />
    <EditText
        android:id="@+id/user_pass"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/EnterPass"
        android:textColorHint="#6a6a6a"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textColor="#fdfdfd" />

    <Button
        android:id="@+id/button_reg"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="#e2a600"
        android:text="@string/Registration"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/reg_to_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#fdfdfd"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:textSize="17sp"
        android:textStyle="bold"
        android:text="@string/Authorization" />

</LinearLayout>